<resources>
    <string name="app_name">Store</string>
    <string name="sign_in">Sign IN</string>
    <string name="sign_up">Sign UP</string>
    <string name="email_hint">Enter Your Email</string>
    <string name="password_hint">Enter Your Password</string>
    <string name="log_in_button">Log IN</string>
    <string name="company_name">Company Name</string>
    <string name="company_email">Company Email</string>
    <string name="company_phone">Company Phone</string>
    <string name="company_password">Password</string>
    <string name="products">Products</string>
    <string name="register">Register</string>
    <string name="title_activity_my_company">MyCompany</string>

    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="product_type">Product Type</string>
    <string name="add_button">Add</string>
    <string name="cancel_button">Cancel</string>
    <string name="logout">Log out</string>
    <string name="product_image_description">Product Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_product">CreateProduct</string>
    <string name="todo">TODO</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
