<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="8"
    tools:context=".CreateProduct">

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:hint="@string/product_name"
        android:inputType="text"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:hint="@string/product_description"
        android:inputType="text"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:hint="@string/product_price"
        android:inputType="phone"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/product_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:hint="@string/product_type"
        android:inputType="text"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:contentDescription="@string/product_image_description"
        android:onClick="addPhoto"
        android:src="@drawable/ic_add_photo" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <com.balysv.materialripple.MaterialRippleLayout
                style="@style/material_ripple2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button_reverse"
                    android:onClick="addProduct"
                    android:text="@string/add_button"
                    android:textColor="@color/colorPrimary" />

            </com.balysv.materialripple.MaterialRippleLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <com.balysv.materialripple.MaterialRippleLayout
                style="@style/material_ripple2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button_reverse"
                    android:onClick="removeProduct"
                    android:text="@string/cancel_button"
                    android:textColor="@color/colorPrimary" />

            </com.balysv.materialripple.MaterialRippleLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


</LinearLayout>