<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="6"
    android:orientation="vertical"
    tools:context=".ShowActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/AppTheme.AppBarOverlay" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="12">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_shopping_cart" />

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <com.balysv.materialripple.MaterialRippleLayout
                style="@style/material_ripple2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button_reverse"
                    android:padding="5dp"
                    android:shadowColor="@android:color/darker_gray"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="15"
                    android:text="@string/product_price"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold|italic|normal" />

            </com.balysv.materialripple.MaterialRippleLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:paddingStart="5dp"
        android:shadowColor="@android:color/darker_gray"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="15"
        android:text="@string/product_name"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold|italic|normal" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="2"
        android:paddingStart="5dp"
        android:shadowColor="@android:color/darker_gray"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="15"
        android:text="@string/product_description"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold|italic|normal" />


</LinearLayout>