<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="100dp"
            android:layout_weight="3"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="6">

                <EditText
                    android:id="@+id/company_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:hint="@string/company_name"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="20sp"
                     />

                <EditText
                    android:id="@+id/company_email"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:hint="@string/company_email"
                    android:padding="5dp"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="20sp"
                     />

                <EditText
                    android:id="@+id/company_phone"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:inputType="phone"
                    android:hint="@string/company_phone"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="20sp"
                    />

                <EditText
                    android:id="@+id/company_password"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:hint="@string/company_password"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="20sp"
                    android:inputType="textPassword"
                   />

                <EditText
                    android:id="@+id/company_products"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:hint="@string/products"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="20sp"
                    />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <com.balysv.materialripple.MaterialRippleLayout
                        style="@style/material_ripple2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/register_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/round_button_reverse"
                            android:onClick="registerPerson"
                            android:text="@string/register"
                            android:textColor="@color/colorPrimary" />

                    </com.balysv.materialripple.MaterialRippleLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>