<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SigningActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="15"
            android:src="@drawable/ic_cart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_button"
                android:drawableEnd="@drawable/ic_person"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_button"
                android:drawableEnd="@drawable/ic_key"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="20sp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    style="@style/material_ripple"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/log_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_button"
                        android:onClick="onClickLogIn"
                        android:text="@string/log_in_button"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        android:textStyle="bold|italic" />

                </com.balysv.materialripple.MaterialRippleLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>